# GameExercise

./: .gitignore
breakout/: CMakeLists.txt  README.md
breakout/src/: game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  glad.cpp  main.cpp  particle.cpp  particle.h  post_processor.cpp  post_processor.h  resource_manager.cpp  resource_manager.h  shader.cpp  sprite.cpp  sprite.h  texture.cpp  texture.h
breakout/src/glad/: glad.h
breakout/src/shaders/: sprite.frag  sprite.vert
breakout/test/: gl_window.cpp
